--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@testing-library/user-event": "^14.5.2",
+    "clsx": "^2.1.1",
     "next": "^14.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
