--- a/package.json
+++ b/package.json
@@ -3,15 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "predev": "rm -fr .next",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "next lint --fix",
     "test": "jest"
   },
   "dependencies": {
+    "@next/eslint-plugin-next": "^14.2.3",
     "@testing-library/user-event": "^14.5.2",
     "clsx": "^2.1.1",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "next": "^14.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
