--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,11 @@
     "plugin:react/recommended",
     "plugin:react-hooks/recommended",
     "plugin:@next/next/recommended",
+    "plugin:jest/recommended",
+    "plugin:jest/style",
     "next/core-web-vitals"
-  ]
+  ],
+  "rules": {
+    "jest/consistent-test-it": ["error", { "fn": "test" }]
+  }
 }
