--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "daisyui": "^4.11.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
+    "eslint-plugin-jest": "^28.5.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "next-router-mock": "^0.9.13",
