prettier と eslint-config-prettier を追加

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,13 @@
 {
-  "extends":
-  [
+  "extends": [
     "eslint:recommended",
     "plugin:react/recommended",
     "plugin:react-hooks/recommended",
     "plugin:@next/next/recommended",
     "plugin:jest/recommended",
     "plugin:jest/style",
-    "next/core-web-vitals"
+    "next/core-web-vitals",
+    "prettier"
   ],
   "rules": {
     "jest/consistent-test-it": ["error", { "fn": "test" }]
