--- a/package.json
+++ b/package.json
@@ -8,15 +8,18 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint --fix",
+    "format": "prettier --write .",
     "test": "jest"
   },
   "dependencies": {
     "@next/eslint-plugin-next": "^14.2.3",
     "@testing-library/user-event": "^14.5.2",
     "clsx": "^2.1.1",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.2",
     "next": "^14.2.3",
+    "prettier": "^3.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "ts-node": "^10.9.2"
